# pykissembed

./: .coverage  .gitignore  =1.10  LICENSE  README.md  package-lock.json  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  publish-testpypi-cloud.yml  publish-testpypi-local.yml  publish-testpypi.yml  pykissembed.yml  pyqtest.yml
.serena/: project.yml
advisor-mcp/: advisor_mcp_server.py  requirements.txt  start_advisor.sh
docs/: MIGRATING_FROM_MEGA_SCRAPPER.md
pykissembed/: __init__.py  baselines_engine.py  cli.py  config.py  conftest.py  paths.py  plugin.py  vscode_settings.py  wrapper_analysis.py
pykissembed/checks/: __init__.py  code_complexity.py  code_similarity.py  comment_density.py  docstring_format.py  lint_typecheck.py
pykissembed/providers/: __init__.py  base.py  local.py  registry.py
pykissembed/schemas/: baselines.v1.json
pykissembed/similarity/: __init__.py  ast_helpers.py  checks.py  complexity.py  constants.py  embeddings.py  exclusions.py  file_split.py  jina_similarity.py  pca.py  populate_embeddings.py  refactor_index.py  storage.py  types.py
pykissembed_cloud/: README.md  pyproject.toml
pykissembed_cloud/pykissembed_cloud/: __init__.py  dotenv.py
pykissembed_cloud/pykissembed_cloud/providers/: __init__.py  _openai_compat.py  gemini.py  jina.py  openai.py  qwen.py
pykissembed_cloud/tests/: test_providers.py
pykissembed_cloud/tests/integration/: test_cloud_providers_live.py
pykissembed_local/: .coverage  README.md  pyproject.toml
pykissembed_local/pykissembed_local/: __init__.py  provider.py  runner.py
pykissembed_local/tests/: __init__.py  test_provider.py
pykissembed_local/tests/integration/: __init__.py  test_local_provider_live.py
pyqtest/: __init__.py  baselines_engine.py  cli.py  config.py  conftest.py  paths.py  plugin.py
pyqtest/checks/: __init__.py  code_complexity.py  code_similarity.py  comment_density.py  docstring_format.py
pyqtest/providers/: __init__.py  base.py  local.py  registry.py
pyqtest/schemas/: baselines.v1.json
pyqtest/similarity/: __init__.py
pyqtest_cloud/: README.md  pyproject.toml
pyqtest_cloud/pyqtest_cloud/: __init__.py  dotenv.py
pyqtest_cloud/pyqtest_cloud/providers/: __init__.py  _openai_compat.py  gemini.py  openai.py  qwen.py
pyqtest_cloud/tests/: __init__.py  test_cloud_providers.py
pyqtest_cloud/tests/integration/: __init__.py  test_cloud_providers_live.py
pyqtest_local/: README.md  pyproject.toml
pyqtest_local/pyqtest_local/: __init__.py  provider.py  runner.py
pyqtest_local/tests/: __init__.py  test_local_provider.py
pyqtest_local/tests/integration/: test_local_provider_live.py
tests/: _similarity_backend.py  conftest.py  test_baselines_engine.py  test_cli.py  test_comment_density_check.py  test_config.py  test_dependency_policy.py  test_embedding_transports.py  test_install_extras.py  test_plugin_collection.py  test_providers.py  test_publish_workflows.py  test_similarity.py  test_similarity_parity.py  test_voyage_embeddings.py  test_vscode_settings.py  test_wrapper_proliferation.py
tests/baselines/: codestral_ast_embeddings.json.zlib  codestral_text_embeddings.json.zlib  comment_density.json  complexity.json  docstring_format.json  function_hashes.json  jina_ast_passage_embeddings.json.zlib  jina_ast_query_embeddings.json.zlib  jina_text_passage_embeddings.json.zlib  jina_text_query_embeddings.json.zlib  lint_typecheck.json  lint_typecheck_report.json  openai_ast_embeddings.json.zlib  openai_text_embeddings.json.zlib  similarity.json
tests/fixtures/sample_repo/: MIGRATION_RUN.md  pyproject.toml
tests/fixtures/sample_repo/src/example_pkg/: __init__.py  core.py
tests/fixtures/sample_repo/tests/: __init__.py  code_complexity.py  code_similarity.py  comment_density.py  docstring_format.py  lint_typecheck.py  test_placeholder.py
tests/fixtures/sample_repo/tests/baselines/: codestral_ast_embeddings.json.zlib  codestral_text_embeddings.json.zlib  comment_density.json  complexity.json  docstring_format.json  lint_typecheck.json  lint_typecheck_report.json  similarity.json
