# pykissembed — generic Python code-quality test library (pytest plugin)
#
# Distribution model:
#   pykissembed              — slim core (lint + type + complexity + docstring + comment density)
#   pykissembed-local        — adds sentence-transformers (recommended default for similarity)
#   pykissembed-cloud        — adds OpenRouter-routed openai / gemini / qwen providers
#
# Default mode is "baseline-and-ratchet" — see README.md.

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "pykissembed"
version = "0.1.15"
description = "Generic Python code-quality test library: lint, type, complexity, docstring, comment density, and embedding-based similarity (pytest plugin)."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
keywords = ["pytest", "lint", "ruff", "pyright", "complexity", "docstring", "similarity"]
authors = [{ name = "Alvaro" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "pytest>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.21",
    "click>=8.1",
    "jsonschema>=4.21",
    "ruff>=0.7",
    "pyright[nodejs]>=1.1.390",
    "radon>=6.0",
    "complexipy>=0.5",
    "numpy>=1.26",
    "pandas>=3.0",
    "scikit-learn>=1.5",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
# Local embedding provider (sentence-transformers). Recommended default for similarity.
local = [
    "pykissembed-local",
]
# Cloud embedding providers (openai / gemini / qwen via OpenRouter) — separate subpackage.
cloud = [
    "pykissembed-cloud",
]
# Convenience: install both extras in one go.
#     uv add "pykissembed[all]"
all = [
    "pykissembed[local]",
    "pykissembed[cloud]",
]

[project.scripts]
pykissembed = "pykissembed.cli:app"

[project.entry-points.pytest11]
pykissembed = "pykissembed.plugin"

# Built-in provider entry point: local sentence-transformers.
# Cloud providers are registered by the pykissembed-cloud subpackage.
[project.entry-points."pykissembed.providers"]
local = "pykissembed.providers.local:LocalProvider"

# Dev-only tooling. Install with: `uv sync --group dev`.
[dependency-groups]
dev = [
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "ruff>=0.15.20",
    "twine>=6.0",
    "mcp[cli]>=1.28,<2.0",  # advisor-mcp server deps (ty resolution)
    "google-genai>=1.0",    # optional gemini provider in similarity/embeddings.py (ty resolution)
    "voyageai>=0.3",        # optional voyage provider in similarity/embeddings.py (ty resolution)
]

[tool.hatch.build.targets.wheel]
packages = ["pykissembed", "src/pykissembed"]
include = ["pykissembed/schemas/*.json"]

# The `[local]` / `[cloud]` extras reference sibling subpackages. They are
# workspace members, so we mark them as such under `[tool.uv.sources]`.
[tool.uv.sources]
pykissembed-local = { workspace = true }
pykissembed-cloud = { workspace = true }

[tool.uv.workspace]
members = ["pykissembed_local", "pykissembed_cloud"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# Live = real network calls (cloud providers) or model downloads (local).
# Default to skipping them; opt in with `pytest -m live`.
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-m", "not live",
    "-n", "auto",
]
markers = [
    "lint: lint + type-check gate",
    "complexity: code complexity metrics (CC, COG, MI, line counts, docstrings)",
    "density: comment density checks",
    "docstring_format: NumPy docstring format (ruff D rules)",
    "similarity: embedding-based near-duplicate detection (requires cached embeddings)",
    "experimental: unstable APIs — refactor_index, file_split",
    "live: live network / model-load tests (skipped by default; opt in with -m live)",
        "smoke: fast subset of live tests suitable for CI (e.g. -m live-and-smoke)",
        "slow: heavyweight tests (uv sync, wheel builds); opt in with -m slow",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
branch = true
source = ["pykissembed"]
omit = [
    "pykissembed/tests/*",
    "tests/fixtures/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # --- Formatter conflicts / documentation style ---
    "E501",    # line-too-long — enforcing line length is the formatter's job, not the linter's
    "CPY001",  # missing-copyright-notice — files don't carry per-file copyright headers in this project
    "COM812",  # missing-trailing-comma — owned by the ruff formatter; the lint rule fights it
    "D203",    # incorrect-blank-line-before-class — wants a blank line before class docstrings; mutually exclusive with D211 (no blank line), which this project follows
    "D213",    # multi-line-summary-second-line — wants the summary to start on line 2; mutually exclusive with D212 (summary on line 1, the NumPy-docstring style used here)
    "D401",    # non-imperative-mood — first docstring word need not be imperative ("Returns…" is fine in NumPy style)
    "D102", "D103", "D105", "D107",  # undocumented public method / public function / magic method / __init__ — docstrings optional on test helpers and dunders
    # --- Size / complexity thresholds (complexity is governed by pykissembed's own gate) ---
    "PLR1702", # too-many-nested-blocks
    "PLR0911", # too-many-return-statements
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0914", # too-many-locals
    "PLR0915", # too-many-statements
    "PLR0916", # too-many-boolean-expressions
    "PLR0917", # too-many-positional-arguments
    "C901",    # complex-structure — McCabe complexity; tracked by pykissembed's complexity check instead
    # --- Deliberate idioms in this codebase ---
    "PLR2004", # magic-value-comparison — bare literals in comparisons are fine in tooling/tests (thresholds, counts, exit codes)
    "ERA001",  # commented-out-code — commented code kept as inline notes/examples
    "G004",    # logging-f-string — f-strings in logging calls accepted over lazy %-formatting
    "S101",    # assert — pytest tests rely on bare `assert`
    "S603",    # subprocess-without-shell-equals-true — subprocess calls use fixed argv lists (ruff/pyright), not untrusted input
    "TRY300",  # try-consider-else — returning from the `try` body instead of an `else` block is accepted style
    "TRY401",  # verbose-log-message — passing the caught exception object to logging.exception() is tolerated
    "FBT001",  # boolean-type-hint-positional-argument — bool positional params are idiomatic in Typer/Click apps
    "FBT003",  # boolean-positional-value-in-call — passing literal True/False positionally is accepted
    "PLC0415", # import-outside-top-level — lazy in-function imports are deliberate for optional providers (openai, genai, voyageai)
    "TC003",   # typing-only-standard-library-import — stdlib typing-only imports may stay at module level instead of a TYPE_CHECKING block
    "BLE001",  # blind-except — catching broad Exception is OK at the CLI boundary where errors become exit codes
    "INP001",  # implicit-namespace-package — test/fixture dirs intentionally have no __init__.py
    "B008",    # function-call-in-default-argument — calls in defaults OK for module-level Path constants
    "ANN201",  # missing-return-type-undocumented-public-function — return annotations optional on helpers
    "ANN401",  # any-type — typing.Any allowed at dynamic boundaries (kwargs, JSON payloads)
    "ARG002",  # unused-method-argument — unused args kept on monkeypatch fixtures to match required signatures
    "ARG005",  # unused-lambda-argument — unused lambda params kept to match callback signatures
    "EM102",   # f-string-in-exception — f-string literals directly in `raise X(f"…")` accepted without a msg variable
    "S112",    # try-except-continue — continuing past per-item errors is deliberate in scan loops
    "PERF403", # manual-dict-comprehension — explicit dict-building loops kept for readability
    "PLW0603", # global-statement — `global` used for module-level lazy caches (e.g. _VALIDATOR)
    "SLF001",  # private-member-access — tests reach into private members by design
    "PYI049",  # unused-private-typed-dict — private TypedDicts kept as structural documentation
    "F841",    # unused-variable — unused locals tolerated in early-return / defensive paths
    # --- Suppressions for ported similarity code (mega-scrapper heritage) ---
    "DOC501",  # docstring-missing-exception — raised exceptions (KeyboardInterrupt etc.) not all listed in Raises sections
    "DOC201",  # docstring-missing-returns — returns documented mega-scrapper style, not always as a Returns section
    "ARG001",  # unused-function-argument — pytest fixture args (shared_baselines etc.) received but unused
    "B028",    # no-explicit-stacklevel — warnings.warn() calls without stacklevel= accepted
    "FBT002",  # boolean-default-value-positional-argument — bool defaults on positional params accepted
    "S108",    # hardcoded-temp-file — test fixtures use literal /tmp paths on purpose
    "PLC2701", # import-private-name — tests import private names (e.g. _CHECK_STEMS) to inspect internals
    "TC006",   # runtime-cast-value — unquoted type expressions inside typing.cast() accepted
    "TRY301",  # raise-within-try — raising directly inside a `try` body (instead of an inner helper) accepted in ported code
    "RUF069",  # float-equality-comparison — tests assert exact float values on purpose
    "PLW2901", # redefined-loop-name — loop variable reassigned in body (`line` reuse in .env parsing)
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# S404 (suspicious-subprocess-import, preview-only) — test helpers legitimately
# `import subprocess` to shell out and exercise the CLI end-to-end.
"tests/**" = ["ANN001", "ANN201", "ANN202", "S101", "PLR2004", "S404"]
"pykissembed/tests/fixtures/**" = ["ALL"]

[tool.pyright]
include = ["pykissembed", "src/pykissembed", "tests"]
pythonVersion = "3.14"
extraPaths = ["src"]

# ty (editor type checker). The extra path resolves cuml from the RAPIDS pixi
# env (machine-specific; harmlessly absent elsewhere — cuml just won't resolve).
[tool.ty.environment]
extra-paths = ["/home/alvaro/rapids-playground/.pixi/envs/test/lib/python3.12/site-packages"]

# tests/fixtures/sample_repo is a self-contained sample project (own pyproject,
# src/example_pkg); its imports can never resolve against this venv.
[tool.ty.src]
exclude = ["tests/fixtures/sample_repo"]
