# pykissembed — generic Python code-quality test library (pytest plugin)
#
# Distribution model:
#   pykissembed              — slim core (lint + type + complexity + docstring + comment density)
#   pykissembed-local        — adds sentence-transformers (recommended default for similarity)
#   pykissembed-cloud        — adds OpenRouter-routed openai / gemini / qwen providers
#
# Default mode is "baseline-and-ratchet" — see README.md.

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "pykissembed"
version = "0.1.17"
description = "Generic Python code-quality test library: lint, type, complexity, docstring, comment density, and embedding-based similarity (pytest plugin)."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
keywords = ["pytest", "lint", "ruff", "pyright", "complexity", "docstring", "similarity"]
authors = [{ name = "Alvaro" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "pytest>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.21",
    "click>=8.1",
    "jsonschema>=4.21",
    "filelock>=3.12",
    "ruff>=0.7",
    "pyright[nodejs]>=1.1.390",
    "radon>=6.0",
    "complexipy>=0.5",
    "numpy>=1.26",
    "pandas>=3.0",
    "scikit-learn>=1.5",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
# Local embedding provider (sentence-transformers). Recommended default for similarity.
local = [
    "pykissembed-local",
]
# Cloud embedding providers (openai / gemini / qwen via OpenRouter) — separate subpackage.
cloud = [
    "pykissembed-cloud",
]
# Convenience: install both extras in one go.
#     uv add "pykissembed[all]"
all = [
    "pykissembed[local]",
    "pykissembed[cloud]",
]

[project.scripts]
pykissembed = "pykissembed.cli:app"

[project.entry-points.pytest11]
pykissembed = "pykissembed.plugin"

# Built-in provider entry point: local sentence-transformers.
# Cloud providers are registered by the pykissembed-cloud subpackage.
[project.entry-points."pykissembed.providers"]
local = "pykissembed.providers.local:LocalProvider"

# Dev-only tooling. Install with: `uv sync --group dev`.
[dependency-groups]
dev = [
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "ruff>=0.15.20",
    "twine>=6.0",
    "mcp[cli]>=1.28,<2.0",  # advisor-mcp server deps (ty resolution)
    "google-genai>=1.0",    # optional gemini provider in similarity/embeddings.py (ty resolution)
    "voyageai>=0.3",        # optional voyage provider in similarity/embeddings.py (ty resolution)
]

[tool.hatch.build.targets.wheel]
packages = ["pykissembed", "src/pykissembed"]
include = ["pykissembed/schemas/*.json"]

# Self-check: pykissembed dogfoods its own checks against its own source.
[tool.pykissembed]
paths = ["pykissembed"]

# The `[local]` / `[cloud]` extras reference sibling subpackages. They are
# workspace members, so we mark them as such under `[tool.uv.sources]`.
[tool.uv.sources]
pykissembed-local = { workspace = true }
pykissembed-cloud = { workspace = true }

[tool.uv.workspace]
members = ["pykissembed_local", "pykissembed_cloud"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# Live = real network calls (cloud providers) or model downloads (local).
# Default to skipping them; opt in with `pytest -m live`.
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-m", "not live",
    "-n", "auto",
]
markers = [
    "lint: lint + type-check gate",
    "complexity: code complexity metrics (CC, COG, MI, line counts, docstrings)",
    "density: comment density checks",
    "docstring_format: NumPy docstring format (ruff D rules)",
    "similarity: embedding-based near-duplicate detection (requires cached embeddings)",
    "experimental: unstable APIs — refactor_index, file_split",
    "live: live network / model-load tests (skipped by default; opt in with -m live)",
        "smoke: fast subset of live tests suitable for CI (e.g. -m live-and-smoke)",
        "slow: heavyweight tests (uv sync, wheel builds); opt in with -m slow",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
branch = true
source = ["pykissembed"]
omit = [
    "pykissembed/tests/*",
    "tests/fixtures/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py314"
# advisor-mcp/ is a standalone MCP tool mirrored byte-for-byte from the
# speechtext repo (own venv/requirements.txt, not part of the pykissembed
# package or uv workspace) — its hyphenated directory name can't be a valid
# Python package (N999), so it can't satisfy INP001 by adding __init__.py.
extend-exclude = ["advisor-mcp"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # --- Formatter conflicts / documentation style ---
    "E501",    # line-too-long — enforcing line length is the formatter's job, not the linter's
    "CPY001",  # missing-copyright-notice — files don't carry per-file copyright headers in this project
    "COM812",  # missing-trailing-comma — owned by the ruff formatter; the lint rule fights it
    "S404",    # subprocess imports use fixed argv lists without a shell
    "S403",    # controlled pickle use is limited to the provider round-trip test
    "PLC2701", # private imports are intentional for pytest internals and project tests
    "PLR6301", # provider protocol methods and pytest hooks need instance signatures
    "PLW0717", # broad try boundaries preserve failure isolation at tool/API boundaries
    "D203",    # incorrect-blank-line-before-class — wants a blank line before class docstrings; mutually exclusive with D211 (no blank line), which this project follows
    "D213",    # multi-line-summary-second-line — wants the summary to start on line 2; mutually exclusive with D212 (summary on line 1, the NumPy-docstring style used here)
    "D401",    # non-imperative-mood — first docstring word need not be imperative ("Returns…" is fine in NumPy style)
    "D102", "D103", "D105", "D107",  # undocumented public method / public function / magic method / __init__ — docstrings optional on test helpers and dunders
    # --- Size / complexity thresholds (complexity is governed by pykissembed's own gate) ---
    "PLR1702", # too-many-nested-blocks
    "PLR0911", # too-many-return-statements
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0914", # too-many-locals
    "PLR0915", # too-many-statements
    "PLR0916", # too-many-boolean-expressions
    "PLR0917", # too-many-positional-arguments
    "C901",    # complex-structure — McCabe complexity; tracked by pykissembed's complexity check instead
   
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# S404 (suspicious-subprocess-import, preview-only) — test helpers legitimately
# `import subprocess` to shell out and exercise the CLI end-to-end.
# INP001 (implicit-namespace-package) — root tests/ must NOT get an __init__.py:
# pykissembed_local/tests/__init__.py and pykissembed_cloud/tests/__init__.py
# already make `tests` a real package name in this workspace; a root
# tests/__init__.py would collide with them on sys.path (this exact
# regression is documented in tests/test_similarity_parity.py). Verified by
# testing the __init__.py addition directly: it broke `from
# _similarity_backend import ...`'s bare-name resolution — see git history.
"tests/**" = ["ANN001", "ANN201", "ANN202", "S101", "PLR2004", "S404", "INP001", "PLC2701", "PLR6301"]
"pykissembed/tests/fixtures/**" = ["ALL"]

[tool.pyright]
include = ["pykissembed", "src/pykissembed", "tests"]
pythonVersion = "3.14"
extraPaths = ["src"]

# ty (editor type checker). The extra path resolves cuml from the RAPIDS pixi
# env (machine-specific; harmlessly absent elsewhere — cuml just won't resolve).
[tool.ty.environment]
extra-paths = ["/home/alvaro/rapids-playground/.pixi/envs/test/lib/python3.12/site-packages"]

# tests/fixtures/sample_repo is a self-contained sample project (own pyproject,
# src/example_pkg); its imports can never resolve against this venv.
[tool.ty.src]
exclude = ["tests/fixtures/sample_repo"]
