# pykissembed — generic Python code-quality test library (pytest plugin)
#
# Distribution model:
#   pykissembed              — slim core (lint + type + complexity + docstring + comment density)
#   pykissembed-cloud        — adds cloud embedding providers
#
# Default mode is "baseline-and-ratchet" — see README.md.

[build-system]
requires = ["hatchling>=1.31.0", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "pykissembed"
dynamic = ["version"]
description = "Generic Python code-quality test library: lint, type, complexity, docstring, comment density, and embedding-based similarity (pytest plugin)."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
keywords = ["pytest", "lint", "ruff", "pyright", "complexity", "docstring", "similarity"]
authors = [{ name = "Alvaro" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "pytest>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.21",
    "click>=8.1",
    "jsonschema>=4.21",
    "filelock>=3.12",
    "ruff>=0.7",
    "pyright[nodejs]>=1.1.411",
    "radon>=6.0",
    "complexipy>=0.5",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
# Cloud embedding providers (openai / gemini / qwen via OpenRouter) — separate subpackage.
cloud = [
    "pykissembed-cloud",
]
# Compatibility alias now that cloud is the only supported embedding backend.
#     uv add "pykissembed[all]"
all = [
    "pykissembed-cloud",
]

[project.scripts]
pykissembed = "pykissembed.cli:app"

[project.entry-points.pytest11]
pykissembed = "pykissembed.plugin"

# Dev-only tooling. Install with: `uv sync --group dev`.
[dependency-groups]
dev = [
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "ruff>=0.15.20",
    "twine>=6.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["pykissembed", "src/pykissembed"]
include = ["pykissembed/schemas/*.json"]

# Self-check: pykissembed dogfoods its own checks against its own source.
[tool.pykissembed]
paths = ["pykissembed"]
wrapper_exclude = ["pykissembed/similarity/populate_embeddings.py:get_provider_populator"]

# The cloud extra references its sibling workspace package.
[tool.uv.sources]
pykissembed-cloud = { workspace = true }

[tool.uv.workspace]
members = ["pykissembed_cloud"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# Live = real network calls to cloud providers.
# Default to skipping them; opt in with `pytest -m live`.
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-m", "not live and not slow",
    "-n", "auto",
]
markers = [
    "lint: lint + type-check gate",
    "complexity: code complexity metrics (CC, COG, MI, line counts, docstrings)",
    "density: comment density checks",
    "docstring_format: NumPy docstring format (ruff D rules)",
    "similarity: embedding-based near-duplicate detection (requires cached embeddings)",
    "experimental: unstable APIs — refactor_index, file_split",
    "live: live network tests (skipped by default; opt in with -m live)",
        "smoke: fast subset of live tests suitable for CI (e.g. -m live-and-smoke)",
        "slow: heavyweight tests (uv sync, wheel builds); opt in with -m slow",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
branch = true
source = ["pykissembed"]
omit = [
    "pykissembed/tests/*",
    "tests/fixtures/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # --- Formatter conflicts / documentation style ---
    "line-too-long",    # line-too-long — enforcing line length is the formatter's job, not the linter's
    "missing-copyright-notice",  # missing-copyright-notice — files don't carry per-file copyright headers in this project
    "missing-trailing-comma",  # missing-trailing-comma — owned by the ruff formatter; the lint rule fights it
    "suspicious-subprocess-import",    # subprocess imports use fixed argv lists without a shell
    "suspicious-pickle-import",    # controlled pickle use is limited to the provider round-trip test
    "import-private-name", # private imports are intentional for pytest internals and project tests
    "no-self-use", # provider protocol methods and pytest hooks need instance signatures
    "too-many-statements-in-try-clause", # broad try boundaries preserve failure isolation at tool/API boundaries
    "incorrect-blank-line-before-class",    # incorrect-blank-line-before-class — wants a blank line before class docstrings; mutually exclusive with D211 (no blank line), which this project follows
    "multi-line-summary-second-line",    # multi-line-summary-second-line — wants the summary to start on line 2; mutually exclusive with D212 (summary on line 1, the NumPy-docstring style used here)
    "non-imperative-mood",    # non-imperative-mood — first docstring word need not be imperative ("Returns…" is fine in NumPy style)
    "undocumented-public-method", "undocumented-public-function", "undocumented-magic-method", "undocumented-public-init",  # undocumented public method / public function / magic method / __init__ — docstrings optional on test helpers and dunders
    # --- Size / complexity thresholds (complexity is governed by pykissembed's own gate) ---
    "too-many-nested-blocks", # too-many-nested-blocks
    "too-many-return-statements", # too-many-return-statements
    "too-many-branches", # too-many-branches
    "too-many-arguments", # too-many-arguments
    "too-many-locals", # too-many-locals
    "too-many-statements", # too-many-statements
    "too-many-boolean-expressions", # too-many-boolean-expressions
    "too-many-positional-arguments", # too-many-positional-arguments
    "complex-structure",    # complex-structure — McCabe complexity; tracked by pykissembed's complexity check instead
   
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# S404 (suspicious-subprocess-import, preview-only) — test helpers legitimately
# `import subprocess` to shell out and exercise the CLI end-to-end.
# INP001 (implicit-namespace-package) — root tests/ must NOT get an __init__.py:
# pykissembed_cloud/tests/__init__.py already makes `tests` a real package name
# in this workspace; a root
# tests/__init__.py would collide with them on sys.path (this exact
# regression is documented in tests/test_similarity_parity.py). Verified by
# testing the __init__.py addition directly: it broke `from
# _similarity_backend import ...`'s bare-name resolution — see git history.
"tests/**" = ["missing-type-function-argument", "missing-return-type-undocumented-public-function", "missing-return-type-private-function", "assert", "magic-value-comparison", "suspicious-subprocess-import", "implicit-namespace-package", "import-private-name", "no-self-use"]
"pykissembed/tests/fixtures/**" = ["ALL"]

[tool.pyright]
include = ["pykissembed", "tests"]
exclude = ["tests/fixtures/sample_repo"]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"

# ty (editor type checker). The extra path resolves cuml from the RAPIDS pixi
# env (machine-specific; harmlessly absent elsewhere — cuml just won't resolve).
[tool.ty.environment]
extra-paths = ["/home/alvaro/rapids-playground/.pixi/envs/test/lib/python3.12/site-packages"]

# tests/fixtures/sample_repo is a self-contained sample project (own pyproject,
# src/example_pkg); its imports can never resolve against this venv.
[tool.ty.src]
exclude = ["tests/fixtures/sample_repo"]
