# pykissembed-cloud — cloud embedding providers for pykissembed
#
# All three providers (openai, gemini, qwen) are routed through OpenRouter
# using the OpenAI-compatible API surface. A single `OPENROUTER_API_KEY`
# is therefore enough to enable any of them.
#
# Install alongside the core package:
#
#     pip install pykissembed-cloud
#     export OPENROUTER_API_KEY=sk-or-...
#     pykissembed.providers list
#     pykissembed populate-embeddings --provider gemini

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "pykissembed-cloud"
version = "0.1.16"
description = "Cloud embedding providers for pykissembed (OpenRouter-routed: openai, gemini, qwen)."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
keywords = ["pykissembed", "openrouter", "openai", "gemini", "qwen", "embeddings"]
authors = [{ name = "Alvaro" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "openai>=1.50",
    "pandas>=3.0",
]

[project.entry-points."pykissembed.providers"]
openai = "pykissembed_cloud.providers.openai:OpenAIProvider"
gemini = "pykissembed_cloud.providers.gemini:GeminiProvider"
qwen = "pykissembed_cloud.providers.qwen:QwenProvider"

[tool.hatch.build.targets.wheel]
packages = ["pykissembed_cloud"]

# Dev-only tooling. Install with: `uv sync --group dev`.
[dependency-groups]
dev = [
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
]

[tool.coverage.run]
branch = true
source = ["pykissembed_cloud"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # --- Formatter conflicts / documentation style ---
    "E501",    # line-too-long — enforcing line length is the formatter's job, not the linter's
    "CPY001",  # missing-copyright-notice — files don't carry per-file copyright headers in this project
    "COM812",  # missing-trailing-comma — owned by the ruff formatter; the lint rule fights it
    "D203",    # incorrect-blank-line-before-class — wants a blank line before class docstrings; mutually exclusive with D211 (no blank line), which this project follows
    "D213",    # multi-line-summary-second-line — wants the summary to start on line 2; mutually exclusive with D212 (summary on line 1, the NumPy-docstring style used here)
    "D401",    # non-imperative-mood — first docstring word need not be imperative ("Returns…" is fine in NumPy style)
    "D102", "D103", "D105", "D107",  # undocumented public method / public function / magic method / __init__ — docstrings optional on test helpers and dunders
    # --- Size / complexity thresholds (complexity is governed by pykissembed's own gate) ---
    "PLR0911", # too-many-return-statements
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0914", # too-many-locals
    "PLR0915", # too-many-statements
    "PLR0916", # too-many-boolean-expressions
    "PLR0917", # too-many-positional-arguments
    "C901",    # complex-structure — McCabe complexity; tracked by pykissembed's complexity check instead
    # --- Deliberate idioms in this codebase ---
    "PLR2004", # magic-value-comparison — bare literals in comparisons are fine in tooling/tests (thresholds, counts, exit codes)
    "ERA001",  # commented-out-code — commented code kept as inline notes/examples
    "G004",    # logging-f-string — f-strings in logging calls accepted over lazy %-formatting
    "S101",    # assert — pytest tests rely on bare `assert`
    "S603",    # subprocess-without-shell-equals-true — subprocess calls use fixed argv lists, not untrusted input
    "TRY300",  # try-consider-else — returning from the `try` body instead of an `else` block is accepted style
    "TRY401",  # verbose-log-message — passing the caught exception object to logging.exception() is tolerated
    "FBT001",  # boolean-type-hint-positional-argument — bool positional params are idiomatic in Typer/Click apps
    "FBT003",  # boolean-positional-value-in-call — passing literal True/False positionally is accepted
    "PLC0415", # import-outside-top-level — lazy in-function imports are deliberate (openai imported only when a provider is used)
    "TC003",   # typing-only-standard-library-import — stdlib typing-only imports may stay at module level instead of a TYPE_CHECKING block
    "BLE001",  # blind-except — catching broad Exception is OK at CLI/provider boundaries
    "INP001",  # implicit-namespace-package — test/fixture dirs intentionally have no __init__.py
    "B008",    # function-call-in-default-argument — calls in defaults OK for module-level Path constants
    "ANN201",  # missing-return-type-undocumented-public-function — return annotations optional on helpers
    "ANN401",  # any-type — typing.Any allowed at dynamic boundaries (kwargs, JSON payloads)
    "EM102",   # f-string-in-exception — f-string literals directly in `raise X(f"…")` accepted without a msg variable
    "S112",    # try-except-continue — continuing past per-item errors is deliberate in scan loops
    "PERF403", # manual-dict-comprehension — explicit dict-building loops kept for readability
    "PLW0603", # global-statement — `global` used for module-level lazy caches
    "UP036",   # outdated-version-block — sys.version_info fallback blocks kept for older-Python compatibility shims
    "SLF001",  # private-member-access — tests reach into private members by design
    "PLR6301", # no-self-use — Protocol-bound methods don't need self
    "PYI049",  # unused-private-typed-dict — private TypedDicts kept as structural documentation
    "F841",    # unused-variable — unused locals tolerated in early-return / defensive paths
    "ARG002",  # unused-method-argument — unused args kept on monkeypatch fixtures to match required signatures
    "ARG005",  # unused-lambda-argument — unused lambda params kept to match callback signatures
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN001", "ANN201", "ANN202", "S101", "PLR2004", "PLR6301"]

[tool.ty.analysis]
respect-type-ignore-comments = false

[tool.ty.rules]
all = "error"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# Live = real network calls (cloud providers). Default to skipping them;
# opt in with `pytest -m live`.
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-m", "not live",
    "-n", "auto",
]
markers = [
    "live: live network tests (skipped by default; enable with -m live)",
        "smoke: fast subset of live tests suitable for CI (e.g. -m live-and-smoke)",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.pyright]
include = ["pykissembed_cloud", "tests"]
pythonVersion = "3.14"
